--- a/SCommerce.Main/App.xaml
+++ b/SCommerce.Main/App.xaml
@@ -5,4 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SCommerce.Main">
 
+    <windows:PrismUnityApplication.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light" Source="Themes/LightColorPallete.xaml" />
+                <ResourceDictionary x:Key="Dark" Source="Themes/DarkColorPallete.xaml" />
+            </ResourceDictionary.ThemeDictionaries>
+        </ResourceDictionary>
+    </windows:PrismUnityApplication.Resources>
 </windows:PrismUnityApplication>
